fix: address mobile overflow issues in Home and NewsCard components

--- a/src/components/NotificationBell.scss
+++ b/src/components/NotificationBell.scss
@@ -158,7 +158,7 @@
     .modal-dialog {
       max-width: none;
       margin: 0.5rem;
-      min-height: calc(100dvh - 1rem);
+      min-height: 190px;
     }
 
     .modal-content {
